@@ -5,6 +5,16 @@
 	(twittering-start-http-session-curl): add an option "-d" whenever
 	`method' equals to "POST".
 
+	* twittering-mode.el: Use the ID of the retweeted original tweet
+	on generating a URL or retweeting it.
+	(twittering-status-to-status-datum): add new property `source-id'
+	specifying a source tweet of a retweet.
+	(twittering-generate-formater-for-first-spec): generate a URL for
+	a retweet from the ID of its source.
+	(twittering-generate-format-status-function): add `source-id' as a
+	common property.
+	(twittering-native-retweet): use `source-id' for a retweet.
+
 2010-07-25  Tadashi MATSUO  <tad@mymail.twin.jp>
 
 	* twittering-mode.el (twittering-mode): avoid repeating
